Fix horizontal scroll bug

--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -225,7 +225,7 @@
 }
 
 body {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 img {
